--- a/engine/src/bigball.vcxproj.filters
+++ b/engine/src/bigball.vcxproj.filters
@@ -6,15 +6,14 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="core\core.h">
       <Filter>core</Filter>
     </ClInclude>
+    <ClInclude Include="bigball.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="bigball.cpp" />
-    <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="dllmain.cpp" />
   </ItemGroup>
 </Project>
