--- a/engine/src/bigball.vcxproj
+++ b/engine/src/bigball.vcxproj
@@ -161,6 +161,8 @@
   <ItemGroup>
     <ClInclude Include="bigball.h" />
     <ClInclude Include="core\core.h" />
+    <ClInclude Include="core\types.h" />
+    <ClInclude Include="engine\engine.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
@@ -179,6 +181,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
       </PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="engine\engine.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
