--- a/engine/src/bigball.vcxproj.filters
+++ b/engine/src/bigball.vcxproj.filters
@@ -4,6 +4,9 @@
     <Filter Include="core">
       <UniqueIdentifier>{548945bd-3cd8-4442-b73c-b26ba91e37e1}</UniqueIdentifier>
     </Filter>
+    <Filter Include="engine">
+      <UniqueIdentifier>{ad4b7d9a-896f-45a5-857b-8795708cb8a2}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="targetver.h" />
@@ -11,9 +14,18 @@
       <Filter>core</Filter>
     </ClInclude>
     <ClInclude Include="bigball.h" />
+    <ClInclude Include="engine\engine.h">
+      <Filter>engine</Filter>
+    </ClInclude>
+    <ClInclude Include="core\types.h">
+      <Filter>core</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="bigball.cpp" />
     <ClCompile Include="dllmain.cpp" />
+    <ClCompile Include="engine\engine.cpp">
+      <Filter>engine</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
