--- a/engine/src/bigball.vcxproj
+++ b/engine/src/bigball.vcxproj
@@ -162,6 +162,8 @@
     <ClInclude Include="bigball.h" />
     <ClInclude Include="core\core.h" />
     <ClInclude Include="core\types.h" />
+    <ClInclude Include="engine\basemanager.h" />
+    <ClInclude Include="engine\camera.h" />
     <ClInclude Include="engine\engine.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -181,6 +183,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
       </PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="engine\basemanager.cpp" />
+    <ClCompile Include="engine\camera.cpp" />
     <ClCompile Include="engine\engine.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
