--- a/engine/src/bigball.vcxproj.filters
+++ b/engine/src/bigball.vcxproj.filters
@@ -41,6 +41,9 @@
     <ClInclude Include="core\templates.h">
       <Filter>core</Filter>
     </ClInclude>
+    <ClInclude Include="core\array.h">
+      <Filter>core</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="bigball.cpp" />
@@ -55,6 +58,9 @@
       <Filter>engine</Filter>
     </ClCompile>
     <ClCompile Include="math\vector.cpp">
+      <Filter>math</Filter>
+    </ClCompile>
+    <ClCompile Include="math\constants.cpp">
       <Filter>math</Filter>
     </ClCompile>
   </ItemGroup>
