--- a/engine/src/bigball.vcxproj
+++ b/engine/src/bigball.vcxproj
@@ -61,35 +61,35 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
     <OutDir>..\bin\$(Platform)_$(Configuration)\</OutDir>
-    <IncludePath>..\..\3rdparty\SDL2-2.0.1\include;..\..\3rdparty\glew-1.10.0\include;$(IncludePath)</IncludePath>
-    <LibraryPath>..\..\3rdparty\SDL2-2.0.1\lib\x86;..\..\3rdparty\glew-1.10.0\lib\release\Win32;$(LibraryPath)</LibraryPath>
+    <IncludePath>..\..\3rdparty\SDL2-2.0.1\include;..\..\3rdparty\glew-1.10.0\include;..\..\3rdparty\tinyxml2;$(IncludePath)</IncludePath>
+    <LibraryPath>..\..\3rdparty\SDL2-2.0.1\lib\x86;..\..\3rdparty\glew-1.10.0\lib\release\Win32;..\..\3rdparty\tinyxml2\tinyxml2\bin\$(Platform)-$(Configuration)-Dll;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
     <IntDir>..\intermediate\$(Platform)_$(Configuration)\</IntDir>
     <OutDir>..\bin\$(Platform)_$(Configuration)\</OutDir>
-    <IncludePath>..\..\3rdparty\SDL2-2.0.1\include;..\..\3rdparty\glew-1.10.0\include;$(IncludePath)</IncludePath>
-    <LibraryPath>..\..\3rdparty\SDL2-2.0.1\lib\x64;..\..\3rdparty\glew-1.10.0\lib\release\x64;$(LibraryPath)</LibraryPath>
+    <IncludePath>..\..\3rdparty\SDL2-2.0.1\include;..\..\3rdparty\glew-1.10.0\include;..\..\3rdparty\tinyxml2;$(IncludePath)</IncludePath>
+    <LibraryPath>..\..\3rdparty\SDL2-2.0.1\lib\x64;..\..\3rdparty\glew-1.10.0\lib\release\x64;..\..\3rdparty\tinyxml2\tinyxml2\bin\$(Platform)-$(Configuration)-Dll;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
     <OutDir>..\bin\$(Platform)_$(Configuration)\</OutDir>
-    <IncludePath>..\..\3rdparty\SDL2-2.0.1\include;..\..\3rdparty\glew-1.10.0\include;$(IncludePath)</IncludePath>
-    <LibraryPath>..\..\3rdparty\SDL2-2.0.1\lib\x86;..\..\3rdparty\glew-1.10.0\lib\release\Win32;$(LibraryPath)</LibraryPath>
+    <IncludePath>..\..\3rdparty\SDL2-2.0.1\include;..\..\3rdparty\glew-1.10.0\include;..\..\3rdparty\tinyxml2;$(IncludePath)</IncludePath>
+    <LibraryPath>..\..\3rdparty\SDL2-2.0.1\lib\x86;..\..\3rdparty\glew-1.10.0\lib\release\Win32;..\..\3rdparty\tinyxml2\tinyxml2\bin\$(Platform)-$(Configuration)-Dll;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <OutDir>..\bin\$(Platform)_$(Configuration)\</OutDir>
     <IntDir>..\intermediate\$(Platform)_$(Configuration)\</IntDir>
-    <IncludePath>..\..\3rdparty\SDL2-2.0.1\include;..\..\3rdparty\glew-1.10.0\include;$(IncludePath)</IncludePath>
-    <LibraryPath>..\..\3rdparty\SDL2-2.0.1\lib\x64;..\..\3rdparty\glew-1.10.0\lib\release\x64;$(LibraryPath)</LibraryPath>
+    <IncludePath>..\..\3rdparty\SDL2-2.0.1\include;..\..\3rdparty\glew-1.10.0\include;..\..\3rdparty\tinyxml2;$(IncludePath)</IncludePath>
+    <LibraryPath>..\..\3rdparty\SDL2-2.0.1\lib\x64;..\..\3rdparty\glew-1.10.0\lib\release\x64;..\..\3rdparty\tinyxml2\tinyxml2\bin\$(Platform)-$(Configuration)-Dll;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;WIN32;_DEBUG;_WINDOWS;_USRDLL;BIGBALL_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;TINYXML2_IMPORT;WIN32;_DEBUG;_WINDOWS;_USRDLL;BIGBALL_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PrecompiledHeaderFile>
       </PrecompiledHeaderFile>
       <TreatWChar_tAsBuiltInType>false</TreatWChar_tAsBuiltInType>
@@ -97,7 +97,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>opengl32.lib;glew32.lib;sdl2.lib</AdditionalDependencies>
+      <AdditionalDependencies>opengl32.lib;glew32.lib;sdl2.lib;tinyxml2.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -105,7 +105,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;WIN64;_DEBUG;_WINDOWS;_USRDLL;BIGBALL_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;TINYXML2_IMPORT;WIN64;_DEBUG;_WINDOWS;_USRDLL;BIGBALL_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ExceptionHandling>Sync</ExceptionHandling>
       <PrecompiledHeaderFile>
       </PrecompiledHeaderFile>
@@ -114,7 +114,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>opengl32.lib;glew32.lib;sdl2.lib</AdditionalDependencies>
+      <AdditionalDependencies>opengl32.lib;glew32.lib;sdl2.lib;tinyxml2.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -124,7 +124,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;WIN32;NDEBUG;_WINDOWS;_USRDLL;BIGBALL_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;TINYXML2_IMPORT;WIN32;NDEBUG;_WINDOWS;_USRDLL;BIGBALL_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PrecompiledHeaderFile>
       </PrecompiledHeaderFile>
       <TreatWChar_tAsBuiltInType>false</TreatWChar_tAsBuiltInType>
@@ -134,7 +134,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>opengl32.lib;glew32.lib;sdl2.lib</AdditionalDependencies>
+      <AdditionalDependencies>opengl32.lib;glew32.lib;sdl2.lib;tinyxml2.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -144,7 +144,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;WIN64;NDEBUG;_WINDOWS;_USRDLL;BIGBALL_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;TINYXML2_IMPORT;WIN64;NDEBUG;_WINDOWS;_USRDLL;BIGBALL_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <CompileAs>Default</CompileAs>
       <PrecompiledHeaderFile>
       </PrecompiledHeaderFile>
@@ -155,7 +155,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>opengl32.lib;glew32.lib;sdl2.lib</AdditionalDependencies>
+      <AdditionalDependencies>opengl32.lib;glew32.lib;sdl2.lib;tinyxml2.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -163,16 +163,20 @@
     <ClInclude Include="core\array.h" />
     <ClInclude Include="core\core.h" />
     <ClInclude Include="core\log.h" />
+    <ClInclude Include="core\name.h" />
     <ClInclude Include="core\string.h" />
     <ClInclude Include="core\templates.h" />
     <ClInclude Include="core\types.h" />
     <ClInclude Include="engine\basemanager.h" />
     <ClInclude Include="engine\camera.h" />
     <ClInclude Include="engine\component.h" />
+    <ClInclude Include="engine\componentmanager.h" />
     <ClInclude Include="engine\controller.h" />
+    <ClInclude Include="engine\coposition.h" />
     <ClInclude Include="engine\engine.h" />
     <ClInclude Include="engine\entity.h" />
     <ClInclude Include="engine\entitymanager.h" />
+    <ClInclude Include="engine\entitypattern.h" />
     <ClInclude Include="math\constants.h" />
     <ClInclude Include="math\functions.h" />
     <ClInclude Include="math\vector.h" />
@@ -181,6 +185,7 @@
   <ItemGroup>
     <ClCompile Include="bigball.cpp" />
     <ClCompile Include="core\log.cpp" />
+    <ClCompile Include="core\name.cpp" />
     <ClCompile Include="core\string.cpp" />
     <ClCompile Include="dllmain.cpp">
       <CompileAsManaged Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</CompileAsManaged>
@@ -199,10 +204,13 @@
     <ClCompile Include="engine\basemanager.cpp" />
     <ClCompile Include="engine\camera.cpp" />
     <ClCompile Include="engine\component.cpp" />
+    <ClCompile Include="engine\componentmanager.cpp" />
     <ClCompile Include="engine\controller.cpp" />
+    <ClCompile Include="engine\coposition.cpp" />
     <ClCompile Include="engine\engine.cpp" />
     <ClCompile Include="engine\entity.cpp" />
     <ClCompile Include="engine\entitymanager.cpp" />
+    <ClCompile Include="engine\entitypattern.cpp" />
     <ClCompile Include="math\constants.cpp" />
     <ClCompile Include="math\vector.cpp" />
   </ItemGroup>
