--- a/engine/src/bigball.vcxproj
+++ b/engine/src/bigball.vcxproj
@@ -160,9 +160,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="bigball.h" />
+    <ClInclude Include="core\memory.h" />
     <ClInclude Include="core\array.h" />
     <ClInclude Include="core\core.h" />
+    <ClInclude Include="core\hash.h" />
     <ClInclude Include="core\log.h" />
+    <ClInclude Include="core\map.h" />
     <ClInclude Include="core\name.h" />
     <ClInclude Include="core\string.h" />
     <ClInclude Include="core\templates.h" />
@@ -184,7 +187,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="bigball.cpp" />
+    <ClCompile Include="core\memory.cpp" />
+    <ClCompile Include="core\hash.cpp" />
     <ClCompile Include="core\log.cpp" />
+    <ClCompile Include="core\map.cpp" />
     <ClCompile Include="core\name.cpp" />
     <ClCompile Include="core\string.cpp" />
     <ClCompile Include="dllmain.cpp">
@@ -212,6 +218,7 @@
     <ClCompile Include="engine\entitymanager.cpp" />
     <ClCompile Include="engine\entitypattern.cpp" />
     <ClCompile Include="math\constants.cpp" />
+    <ClCompile Include="math\functions.cpp" />
     <ClCompile Include="math\vector.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
