--- a/engine/src/bigball.vcxproj
+++ b/engine/src/bigball.vcxproj
@@ -62,27 +62,27 @@
     <LinkIncremental>true</LinkIncremental>
     <OutDir>..\bin\$(Platform)_$(Configuration)\</OutDir>
     <IncludePath>..\..\3rdparty\SDL2-2.0.1\include;..\..\3rdparty\glew-1.10.0\include;..\..\3rdparty\tinyxml2;$(IncludePath)</IncludePath>
-    <LibraryPath>..\..\3rdparty\SDL2-2.0.1\lib\x86;..\..\3rdparty\glew-1.10.0\lib\release\Win32;..\..\3rdparty\tinyxml2\tinyxml2\bin\$(Platform)-$(Configuration)-Dll;$(LibraryPath)</LibraryPath>
+    <LibraryPath>..\..\3rdparty\SDL2-2.0.1\lib\x86\$(Configuration);..\..\3rdparty\glew-1.10.0\lib\release\Win32;..\..\3rdparty\tinyxml2\tinyxml2\bin\$(Platform)-$(Configuration)-Dll;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
     <IntDir>..\intermediate\$(Platform)_$(Configuration)\</IntDir>
     <OutDir>..\bin\$(Platform)_$(Configuration)\</OutDir>
     <IncludePath>..\..\3rdparty\SDL2-2.0.1\include;..\..\3rdparty\glew-1.10.0\include;..\..\3rdparty\tinyxml2;$(IncludePath)</IncludePath>
-    <LibraryPath>..\..\3rdparty\SDL2-2.0.1\lib\x64;..\..\3rdparty\glew-1.10.0\lib\release\x64;..\..\3rdparty\tinyxml2\tinyxml2\bin\$(Platform)-$(Configuration)-Dll;$(LibraryPath)</LibraryPath>
+    <LibraryPath>..\..\3rdparty\SDL2-2.0.1\lib\x64\$(Configuration);..\..\3rdparty\glew-1.10.0\lib\release\x64;..\..\3rdparty\tinyxml2\tinyxml2\bin\$(Platform)-$(Configuration)-Dll;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
     <OutDir>..\bin\$(Platform)_$(Configuration)\</OutDir>
     <IncludePath>..\..\3rdparty\SDL2-2.0.1\include;..\..\3rdparty\glew-1.10.0\include;..\..\3rdparty\tinyxml2;$(IncludePath)</IncludePath>
-    <LibraryPath>..\..\3rdparty\SDL2-2.0.1\lib\x86;..\..\3rdparty\glew-1.10.0\lib\release\Win32;..\..\3rdparty\tinyxml2\tinyxml2\bin\$(Platform)-$(Configuration)-Dll;$(LibraryPath)</LibraryPath>
+    <LibraryPath>..\..\3rdparty\SDL2-2.0.1\lib\x86\$(Configuration);..\..\3rdparty\glew-1.10.0\lib\release\Win32;..\..\3rdparty\tinyxml2\tinyxml2\bin\$(Platform)-$(Configuration)-Dll;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <OutDir>..\bin\$(Platform)_$(Configuration)\</OutDir>
     <IntDir>..\intermediate\$(Platform)_$(Configuration)\</IntDir>
     <IncludePath>..\..\3rdparty\SDL2-2.0.1\include;..\..\3rdparty\glew-1.10.0\include;..\..\3rdparty\tinyxml2;$(IncludePath)</IncludePath>
-    <LibraryPath>..\..\3rdparty\SDL2-2.0.1\lib\x64;..\..\3rdparty\glew-1.10.0\lib\release\x64;..\..\3rdparty\tinyxml2\tinyxml2\bin\$(Platform)-$(Configuration)-Dll;$(LibraryPath)</LibraryPath>
+    <LibraryPath>..\..\3rdparty\SDL2-2.0.1\lib\x64\$(Configuration);..\..\3rdparty\glew-1.10.0\lib\release\x64;..\..\3rdparty\tinyxml2\tinyxml2\bin\$(Platform)-$(Configuration)-Dll;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -180,9 +180,12 @@
     <ClInclude Include="engine\entity.h" />
     <ClInclude Include="engine\entitymanager.h" />
     <ClInclude Include="engine\entitypattern.h" />
+    <ClInclude Include="gfx\gfxmanager.h" />
+    <ClInclude Include="gfx\shader.h" />
     <ClInclude Include="math\constants.h" />
     <ClInclude Include="math\functions.h" />
     <ClInclude Include="math\vector.h" />
+    <ClInclude Include="system\file.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
@@ -217,9 +220,12 @@
     <ClCompile Include="engine\entity.cpp" />
     <ClCompile Include="engine\entitymanager.cpp" />
     <ClCompile Include="engine\entitypattern.cpp" />
+    <ClCompile Include="gfx\gfxmanager.cpp" />
+    <ClCompile Include="gfx\shader.cpp" />
     <ClCompile Include="math\constants.cpp" />
     <ClCompile Include="math\functions.cpp" />
     <ClCompile Include="math\vector.cpp" />
+    <ClCompile Include="system\file.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
