--- a/engine/src/bigball.vcxproj
+++ b/engine/src/bigball.vcxproj
@@ -184,9 +184,12 @@
     <ClInclude Include="engine\entity.h" />
     <ClInclude Include="engine\entitymanager.h" />
     <ClInclude Include="engine\entitypattern.h" />
+    <ClInclude Include="engine\tickcontext.h" />
     <ClInclude Include="gfx\gfxmanager.h" />
+    <ClInclude Include="gfx\rendercontext.h" />
     <ClInclude Include="gfx\shader.h" />
     <ClInclude Include="math\constants.h" />
+    <ClInclude Include="math\frustum.h" />
     <ClInclude Include="math\functions.h" />
     <ClInclude Include="math\transform.h" />
     <ClInclude Include="math\vector.h" />
@@ -223,9 +226,12 @@
     <ClCompile Include="engine\entity.cpp" />
     <ClCompile Include="engine\entitymanager.cpp" />
     <ClCompile Include="engine\entitypattern.cpp" />
+    <ClCompile Include="engine\tickcontext.cpp" />
     <ClCompile Include="gfx\gfxmanager.cpp" />
+    <ClCompile Include="gfx\rendercontext.cpp" />
     <ClCompile Include="gfx\shader.cpp" />
     <ClCompile Include="math\constants.cpp" />
+    <ClCompile Include="math\frustum.cpp" />
     <ClCompile Include="math\functions.cpp" />
     <ClCompile Include="math\transform.cpp" />
     <ClCompile Include="math\vector.cpp" />
