--- a/engine/src/bigball.vcxproj
+++ b/engine/src/bigball.vcxproj
@@ -171,6 +171,8 @@
     <ClInclude Include="core\log.h" />
     <ClInclude Include="core\map.h" />
     <ClInclude Include="core\name.h" />
+    <ClInclude Include="core\radixsort.h" />
+    <ClInclude Include="core\sort.h" />
     <ClInclude Include="core\string.h" />
     <ClInclude Include="core\templates.h" />
     <ClInclude Include="core\types.h" />
@@ -201,6 +203,7 @@
     <ClCompile Include="core\hash.cpp" />
     <ClCompile Include="core\log.cpp" />
     <ClCompile Include="core\name.cpp" />
+    <ClCompile Include="core\radixsort.cpp" />
     <ClCompile Include="core\string.cpp" />
     <ClCompile Include="dllmain.cpp">
       <CompileAsManaged Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</CompileAsManaged>
