--- a/engine/src/bigball.vcxproj
+++ b/engine/src/bigball.vcxproj
@@ -196,6 +196,7 @@
     <ClInclude Include="math\constants.h" />
     <ClInclude Include="math\frustum.h" />
     <ClInclude Include="math\functions.h" />
+    <ClInclude Include="math\intersections.h" />
     <ClInclude Include="math\transform.h" />
     <ClInclude Include="math\vector.h" />
     <ClInclude Include="system\file.h" />
@@ -240,6 +241,7 @@
     <ClCompile Include="math\constants.cpp" />
     <ClCompile Include="math\frustum.cpp" />
     <ClCompile Include="math\functions.cpp" />
+    <ClCompile Include="math\intersections.cpp" />
     <ClCompile Include="math\transform.cpp" />
     <ClCompile Include="math\vector.cpp" />
     <ClCompile Include="system\file.cpp" />
