--- a/engine/src/bigball.vcxproj.filters
+++ b/engine/src/bigball.vcxproj.filters
@@ -137,6 +137,9 @@
     <ClInclude Include="system\lockfreequeue.h">
       <Filter>system</Filter>
     </ClInclude>
+    <ClInclude Include="core\map_rh.h">
+      <Filter>core</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp" />
