--- a/engine/src/bigball.vcxproj
+++ b/engine/src/bigball.vcxproj
@@ -176,6 +176,7 @@
     <ClInclude Include="core\log.h" />
     <ClInclude Include="core\map.h" />
     <ClInclude Include="core\name.h" />
+    <ClInclude Include="core\profiler.h" />
     <ClInclude Include="core\radixsort.h" />
     <ClInclude Include="core\sort.h" />
     <ClInclude Include="core\string.h" />
@@ -215,6 +216,7 @@
     <ClCompile Include="core\hash.cpp" />
     <ClCompile Include="core\log.cpp" />
     <ClCompile Include="core\name.cpp" />
+    <ClCompile Include="core\profiler.cpp" />
     <ClCompile Include="core\radixsort.cpp" />
     <ClCompile Include="core\string.cpp" />
     <ClCompile Include="dllmain.cpp">
